--- a/coffidaApp/package.json
+++ b/coffidaApp/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "eslint-config-airbnb": "^18.2.1",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-paper": "^4.7.1",
+    "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
