--- a/coffidaApp/package.json
+++ b/coffidaApp/package.json
@@ -10,11 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.1",
     "axios": "^0.21.1",
     "eslint-config-airbnb": "^18.2.1",
+    "exp": "^57.2.1",
+    "global": "^4.4.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-paper": "^4.7.1",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.2",
     "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
