--- a/coffidaApp/.eslintrc.json
+++ b/coffidaApp/.eslintrc.json
@@ -62,6 +62,7 @@
     "react/react-in-jsx-scope": 0,
     "react/prefer-stateless-function": 0,
     "react/forbid-prop-types": 0,
+    "react/prop-types": 0,
     "react/jsx-props-no-spreading": 0,
     "react/no-unescaped-entities": 0,
     "jsx-a11y/accessible-emoji": 0,
@@ -88,7 +89,7 @@
     "prettier/prettier": [
       "error",
       {
-        "trailingComma": "es5",
+        // "trailingComma": "es5",
         "singleQuote": true,
         "printWidth": 80
       }
