Added ability to log into existing account through Login component

--- a/coffidaApp/ios/Podfile
+++ b/coffidaApp/ios/Podfile
@@ -8,6 +8,8 @@ target 'coffidaApp' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'coffidaAppTests' do
     inherit! :complete
     # Pods for testing
