Removed camelCase rule

--- a/coffidaApp/.eslintrc.json
+++ b/coffidaApp/.eslintrc.json
@@ -21,6 +21,7 @@
     "jest": true
   },
   "rules": {
+    "camelcase":"off",
     "react-hooks/rules-of-hooks": "error",
     "no-debugger": 0,
     "no-alert": 0,
