Added new components to build out User Management section (user profile page)

--- a/coffidaApp/package.json
+++ b/coffidaApp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start && react-native run-android",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.13.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.1",
     "axios": "^0.21.1",
