--- a/coffidaApp/package.json
+++ b/coffidaApp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start && react-native run-android",
+    "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
