--- a/coffidaApp/package.json
+++ b/coffidaApp/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3"
   },
