--- a/coffidaApp/ios/Podfile
+++ b/coffidaApp/ios/Podfile
@@ -10,6 +10,8 @@ target 'coffidaApp' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'coffidaAppTests' do
     inherit! :complete
     # Pods for testing
