--- a/coffidaApp/package.json
+++ b/coffidaApp/package.json
@@ -22,6 +22,7 @@
     "global": "^4.4.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-camera": "^3.42.2",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
