--- a/coffidaApp/android/app/build.gradle
+++ b/coffidaApp/android/app/build.gradle
@@ -135,6 +135,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        missingDimensionStrategy 'react-native-camera', 'general’
+
     }
     splits {
         abi {
