--- a/coffidaApp/android/app/build.gradle
+++ b/coffidaApp/android/app/build.gradle
@@ -135,7 +135,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        missingDimensionStrategy 'react-native-camera', 'general’
+        missingDimensionStrategy 'react-native-camera', 'general'
+        multiDexEnabled true
 
     }
     splits {
@@ -185,6 +186,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'com.android.support:multidex:1.0.3'
+
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
