--- a/coffidaApp/android/settings.gradle
+++ b/coffidaApp/android/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'coffidaApp'
+apply from: '../node_modules/react-native-unimodules/gradle.groovy'; includeUnimodulesProjects()
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
 include ':react-native-camera'
