--- a/coffidaApp/package.json
+++ b/coffidaApp/package.json
@@ -23,12 +23,14 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-camera": "^3.42.2",
+    "react-native-camera-hooks": "^0.5.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
     "react-native-star-rating": "^1.1.0",
+    "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3"
   },
