Added ability to use camera, and storing uri to be used in adding photo to a review

--- a/coffidaApp/ios/Podfile
+++ b/coffidaApp/ios/Podfile
@@ -12,6 +12,8 @@ target 'coffidaApp' do
 
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'coffidaAppTests' do
     inherit! :complete
     # Pods for testing
