--- a/coffidaApp/package.json
+++ b/coffidaApp/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.63.4",
     "react-native-camera": "^3.42.2",
     "react-native-camera-hooks": "^0.5.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.2.1",
     "react-native-paper": "^4.7.1",
