Added ability to search using query parameters

--- a/coffidaApp/ios/Podfile
+++ b/coffidaApp/ios/Podfile
@@ -14,6 +14,8 @@ target 'coffidaApp' do
 
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+  pod 'RNCPicker', :path => '../node_modules/@react-native-picker/picker'
+
   target 'coffidaAppTests' do
     inherit! :complete
     # Pods for testing
