Added pagination to search results

--- a/coffidaApp/.eslintrc.json
+++ b/coffidaApp/.eslintrc.json
@@ -54,6 +54,7 @@
     "func-names": 0,
     "space-before-function-paren": 0,
     "comma-dangle": 0,
+    "allow-ternary": 1,
     "max-len": 0,
     "import/extensions": 0,
     "no-underscore-dangle": 0,
